# voxai

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  GANTT_TIMELINE.md  IMPLEMENTATION_STATUS.md  PARALLELIZATION_ANALYSIS.md  README.md  SYNC_GUIDE.md  TEAM1_CORE.md  TEAM2_INFRA.md  TEAM3_COMPLETION_REPORT.md  TEAM3_UI.md  TEAM_ALLOCATION_PLAN.md  TEAM_SETUP_SUMMARY.md  build.rs  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  gpu-build.yml
assets/icons/: README.md  generate-linux-pngs.sh
assets/icons/macos/: INSTRUCTIONS.md
assets/icons/windows/: INSTRUCTIONS.md
backlogs/: README.md
backlogs/done/: 001-1-project-initialization.md  001-2-cross-platform-build.md  001-3-whisper-integration.md  005-2-system-tray-macos.md  005-4-icons-design.md  006-3-hotkeys-linux.md  007-1-persistent-config.md  008-2-text-injection-macos.md  008-3-text-injection-linux.md
backlogs/templates/: issue-template.md
backlogs/todo/: 001-project-initialization.md  002-ci-cd-setup.md  003-testing-framework-setup.md  004-security-configuration.md
backlogs/todo/epic-01/: 001-1-project-initialization.md  001-2-cross-platform-build.md  001-3-whisper-integration.md
backlogs/todo/epic-02/: 002-1-audio-capture-cpal.md  002-2-noise-reduction.md  002-3-voice-activity-detection.md
backlogs/todo/epic-03/: 003-1-transcription-pipeline.md  003-2-model-management.md  003-3-multi-language-support.md
backlogs/todo/epic-04/: 004-1-cuda-support.md  004-2-metal-support.md  004-3-opencl-support.md  004-4-cpu-optimizations.md
backlogs/todo/epic-05/: 005-1-system-tray-windows.md  005-3-system-tray-linux.md
backlogs/todo/epic-06/: 006-1-hotkeys-windows.md  006-2-hotkeys-macos.md  006-4-hotkey-configuration.md
backlogs/todo/epic-07/: 007-1-persistent-config.md  007-2-settings-ui.md  007-3-audio-device-selection.md
backlogs/todo/epic-08/: 008-1-text-injection-windows.md  008-4-text-post-processing.md
backlogs/todo/epic-09/: 009-1-status-overlay.md  009-2-system-notifications.md  009-3-performance-indicators.md
backlogs/todo/epic-10/: 010-1-unit-tests.md  010-2-integration-tests.md  (+1 more)
docs/: AUTO_UPDATE.md  BUILD.md  DEPENDENCIES.md  DEVELOPER.md  QA_CHECKLIST.md  TEAM_INFRA_SUPPORT.md  USER_GUIDE.md
scripts/: README.md  build-linux.sh  build-macos.sh  build-windows.sh  check-ci.sh  setup-dev.sh
src/: lib.rs  main.rs
src/audio/: buffer.rs  capture.rs  device.rs  mod.rs  noise_reduction.rs  vad.rs
src/config/: language.rs  mod.rs  schema.rs
src/gpu/: mod.rs
src/hotkeys/: linux.rs  macos.rs  mod.rs  windows.rs
src/output/: clipboard.rs  formatter.rs  mod.rs  text_injector_linux.rs  text_injector_macos.rs  text_injector_windows.rs
src/transcription/: downloader.rs  mod.rs  models.rs  pipeline.rs  whisper.rs
src/ui/: menu.rs  mod.rs  settings.rs  tray_linux.rs  tray_macos.rs  tray_windows.rs
tests/: config_tests.rs  integration_tests.rs
tests/common/: mod.rs
(+11 files in other folders)
